# HyperFire3000

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Main.cpp
src/basic/: HudImage.cpp  HudImage.h  Image.cpp  Image.h
src/core/: AudioManager.cpp  AudioManager.h  Color.cpp  Color.h  Entity.cpp  Entity.h  GameManager.cpp  GameManager.h  InputManager.cpp  InputManager.h  Scene.cpp  Scene.h  Vec2.cpp  Vec2.h
src/game/: ExampleScene.cpp  ExampleScene.h  GameScene.cpp  GameScene.h
